--add-modules for java.net.http and java.rmi that are needed by stdlib polyglot code